implemented io bound threadpool and paralell task

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,15 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/FileIOClient/finaltest/ROVER_2.txt
+/FileIOClient/finaltest/ROVER_2 - Copy.txt
+/FileIOClient/finaltest/ROVER_2 - Copy (2).txt
+/FileIOClient/finaltest/index - Copy.txt
+/FileIOClient/finaltest/index - Copy (9).txt
+/FileIOClient/finaltest/index - Copy (8).txt
+/FileIOClient/finaltest/index - Copy (7).txt
+/FileIOClient/finaltest/index - Copy (6).txt
+/FileIOClient/finaltest/index - Copy (5).txt
+/FileIOClient/finaltest/index - Copy (4).txt
+/FileIOClient/finaltest/index - Copy (3).txt
+/FileIOClient/finaltest/index - Copy (2).txt
