First working version of entity framework

--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,4 @@ __pycache__/
 /FileIOClient/finaltest/index - Copy (4).txt
 /FileIOClient/finaltest/index - Copy (3).txt
 /FileIOClient/finaltest/index - Copy (2).txt
+/EFData
