--- a/FileIOClient/FileIOClient.csproj
+++ b/FileIOClient/FileIOClient.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>FileIOClient</RootNamespace>
     <AssemblyName>FileIOClient</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-	<StartWorkingDirectory>$(MSBuildProjectDirectory)</StartWorkingDirectory>
+    <StartWorkingDirectory>$(MSBuildProjectDirectory)</StartWorkingDirectory>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -168,7 +168,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Compile Include="Test\Test.cs" />
+    <Page Include="Presentation\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -176,18 +177,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Presentation\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\20200328050754_InitialCreate.cs" />
-    <Compile Include="Migrations\20200328050754_InitialCreate.designer.cs">
+    <Compile Include="Data\Migrations\20200328050754_InitialCreate.cs" />
+    <Compile Include="Data\Migrations\20200328050754_InitialCreate.designer.cs">
       <DependentUpon>20200328050754_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\PerformanceContextModelSnapshot.cs" />
-    <Compile Include="Model.cs" />
+    <Compile Include="Data\Migrations\PerformanceContextModelSnapshot.cs" />
+    <Compile Include="Business Logic\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -210,13 +211,15 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Data\speed.db" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="finaltest\index.txt" />
+    <Resource Include="Helper\finaltest\index.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
