--- a/PiClient/PiClient.csproj
+++ b/PiClient/PiClient.csproj
@@ -169,18 +169,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Migrations\20200327063234_InitialCreate.cs" />
-    <Compile Include="Migrations\20200327063234_InitialCreate.designer.cs">
+    <Compile Include="Data\Migrations\20200327063234_InitialCreate.cs" />
+    <Compile Include="Data\Migrations\20200327063234_InitialCreate.designer.cs">
       <DependentUpon>20200327063234_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\PerformanceContextModelSnapshot.cs" />
-    <Compile Include="Model.cs" />
-    <Compile Include="UI\UiUtils.cs" />
+    <Compile Include="Data\Migrations\PerformanceContextModelSnapshot.cs" />
+    <Compile Include="Business Logic\Model.cs" />
+    <Compile Include="Presentation\UI\UiUtils.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="Algorithms\NineDigitsofPi.cs" />
+    <Compile Include="Helper\Algorithms\NineDigitsofPi.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -208,6 +208,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Data\speed.db" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -217,7 +218,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
+    <Folder Include="Test\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
